[gd_scene load_steps=6 format=3 uid="uid://366kewl7ljjq"]

[ext_resource type="Script" path="res://stages/arena.gd" id="1_bnlxw"]
[ext_resource type="PackedScene" uid="uid://dup2hg3djpors" path="res://enemies/slime.tscn" id="2_a3qja"]
[ext_resource type="TileSet" uid="uid://d0smdbap4y0rd" path="res://assets/images/tiles/grass.tres" id="3_6ggtn"]
[ext_resource type="PackedScene" uid="uid://431jwwj4oqw0" path="res://player.tscn" id="4_g2ls3"]

[sub_resource type="Curve2D" id="Curve2D_xjmxl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, -65, 0, 0, 0, 0, 1216, -65, 0, 0, 0, 0, 1216, 703, 0, 0, 0, 0, -64, 703, 0, 0, 0, 0, -64, -65)
}
point_count = 5

[node name="Arena" type="Node"]
script = ExtResource("1_bnlxw")
Enemy = ExtResource("2_a3qja")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_6ggtn")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131073, 5, 65536, 131073, 5, 131072, 131073, 5, 196608, 131073, 5, 262144, 131073, 5, 327680, 131073, 5, 393216, 131073, 5, 458752, 131073, 5, 524288, 131073, 5, 589824, 131073, 5, 655360, 131073, 5, 720896, 131073, 5, 786432, 131073, 5, 851968, 131073, 5, 917504, 131073, 5, 983040, 131073, 5, 1048576, 131073, 5, 1114112, 131073, 5, 1179648, 131073, 5, 1245184, 131073, 5, 1, 131073, 5, 65537, 131073, 5, 131073, 131073, 5, 196609, 131073, 5, 262145, 131073, 5, 327681, 131073, 5, 393217, 131073, 5, 458753, 131073, 5, 524289, 131073, 5, 589825, 131073, 5, 655361, 131073, 5, 720897, 131073, 5, 786433, 131073, 5, 851969, 131073, 5, 917505, 131073, 5, 983041, 131073, 5, 1048577, 131073, 5, 1114113, 131073, 5, 1179649, 131073, 5, 1245185, 131073, 5, 2, 131073, 5, 65538, 131073, 5, 131074, 131073, 5, 196610, 131073, 5, 262146, 131073, 5, 327682, 131073, 5, 393218, 131073, 5, 458754, 131073, 5, 524290, 131073, 5, 589826, 131073, 5, 655362, 131073, 5, 720898, 131073, 5, 786434, 131073, 5, 851970, 131073, 5, 917506, 131073, 5, 983042, 131073, 5, 1048578, 131073, 5, 1114114, 131073, 5, 1179650, 131073, 5, 1245186, 131073, 5, 3, 131073, 5, 65539, 131073, 5, 131075, 131073, 5, 196611, 131073, 5, 262147, 131073, 5, 327683, 131073, 5, 393219, 131073, 5, 458755, 131073, 5, 524291, 131073, 5, 589827, 131073, 5, 655363, 131073, 5, 720899, 131073, 5, 786435, 131073, 5, 851971, 131073, 5, 917507, 131073, 5, 983043, 131073, 5, 1048579, 131073, 5, 1114115, 131073, 5, 1179651, 131073, 5, 1245187, 131073, 5, 4, 131073, 5, 65540, 131073, 5, 131076, 131073, 5, 196612, 131073, 5, 262148, 131073, 5, 327684, 131073, 5, 393220, 131073, 5, 458756, 131073, 5, 524292, 131073, 5, 589828, 131073, 5, 655364, 131073, 5, 720900, 131073, 5, 786436, 131073, 5, 851972, 131073, 5, 917508, 131073, 5, 983044, 131073, 5, 1048580, 131073, 5, 1114116, 131073, 5, 1179652, 131073, 5, 1245188, 131073, 5, 5, 131073, 5, 65541, 131073, 5, 131077, 131073, 5, 196613, 131073, 5, 262149, 131073, 5, 327685, 131073, 5, 393221, 131073, 5, 458757, 131073, 5, 524293, 131073, 5, 589829, 131073, 5, 655365, 131073, 5, 720901, 131073, 5, 786437, 131073, 5, 851973, 131073, 5, 917509, 131073, 5, 983045, 131073, 5, 1048581, 131073, 5, 1114117, 131073, 5, 1179653, 131073, 5, 1245189, 131073, 5, 6, 131073, 5, 65542, 131073, 5, 131078, 131073, 5, 196614, 131073, 5, 262150, 131073, 5, 327686, 131073, 5, 393222, 131073, 5, 458758, 131073, 5, 524294, 131073, 5, 589830, 131073, 5, 655366, 131073, 5, 720902, 131073, 5, 786438, 131073, 5, 851974, 131073, 5, 917510, 131073, 5, 983046, 131073, 5, 1048582, 131073, 5, 1114118, 131073, 5, 1179654, 131073, 5, 1245190, 131073, 5, 7, 131073, 5, 65543, 131073, 5, 131079, 131073, 5, 196615, 131073, 5, 262151, 131073, 5, 327687, 131073, 5, 393223, 131073, 5, 458759, 131073, 5, 524295, 131073, 5, 589831, 131073, 5, 655367, 131073, 5, 720903, 131073, 5, 786439, 131073, 5, 851975, 131073, 5, 917511, 131073, 5, 983047, 131073, 5, 1048583, 131073, 5, 1114119, 131073, 5, 1179655, 131073, 5, 1245191, 131073, 5, 8, 131073, 5, 65544, 131073, 5, 131080, 131073, 5, 196616, 131073, 5, 262152, 131073, 5, 327688, 131073, 5, 393224, 131073, 5, 458760, 131073, 5, 524296, 131073, 5, 589832, 131073, 5, 655368, 131073, 5, 720904, 131073, 5, 786440, 131073, 5, 851976, 131073, 5, 917512, 131073, 5, 983048, 131073, 5, 1048584, 131073, 5, 1114120, 131073, 5, 1179656, 131073, 5, 1245192, 131073, 5, 9, 131073, 5, 65545, 131073, 5, 131081, 131073, 5, 196617, 131073, 5, 262153, 131073, 5, 327689, 131073, 5, 393225, 131073, 5, 458761, 131073, 5, 524297, 131073, 5, 589833, 131073, 5, 655369, 131073, 5, 720905, 131073, 5, 786441, 131073, 5, 851977, 131073, 5, 917513, 131073, 5, 983049, 131073, 5, 1048585, 131073, 5, 1114121, 131073, 5, 1179657, 131073, 5, 1245193, 131073, 5, 10, 131073, 5, 65546, 131073, 5, 131082, 131073, 5, 196618, 131073, 5, 262154, 131073, 5, 327690, 131073, 5, 393226, 131073, 5, 458762, 131073, 5, 524298, 131073, 5, 589834, 131073, 5, 655370, 131073, 5, 720906, 131073, 5, 786442, 131073, 5, 851978, 131073, 5, 917514, 131073, 5, 983050, 131073, 5, 1048586, 131073, 5, 1114122, 131073, 5, 1179658, 131073, 5, 1245194, 131073, 5, 11, 131073, 5, 65547, 131073, 5, 131083, 131073, 5, 196619, 131073, 5, 262155, 131073, 5, 327691, 131073, 5, 393227, 131073, 5, 458763, 131073, 5, 524299, 131073, 5, 589835, 131073, 5, 655371, 131073, 5, 720907, 131073, 5, 786443, 131073, 5, 851979, 131073, 5, 917515, 131073, 5, 983051, 131073, 5, 1048587, 131073, 5, 1114123, 131073, 5, 1179659, 131073, 5, 1245195, 131073, 5, 12, 131073, 5, 65548, 131073, 5, 131084, 131073, 5, 196620, 131073, 5, 262156, 131073, 5, 327692, 131073, 5, 393228, 131073, 5, 458764, 131073, 5, 524300, 131073, 5, 589836, 131073, 5, 655372, 131073, 5, 720908, 131073, 5, 786444, 131073, 5, 851980, 131073, 5, 917516, 131073, 5, 983052, 131073, 5, 1048588, 131073, 5, 1114124, 131073, 5, 1179660, 131073, 5, 1245196, 131073, 5, 13, 131073, 5, 65549, 131073, 5, 131085, 131073, 5, 196621, 131073, 5, 262157, 131073, 5, 327693, 131073, 5, 393229, 131073, 5, 458765, 131073, 5, 524301, 131073, 5, 589837, 131073, 5, 655373, 131073, 5, 720909, 131073, 5, 786445, 131073, 5, 851981, 131073, 5, 917517, 131073, 5, 983053, 131073, 5, 1048589, 131073, 5, 1114125, 131073, 5, 1179661, 131073, 5, 1245197, 131073, 5, 14, 131073, 5, 65550, 131073, 5, 131086, 131073, 5, 196622, 131073, 5, 262158, 131073, 5, 327694, 131073, 5, 393230, 131073, 5, 458766, 131073, 5, 524302, 131073, 5, 589838, 131073, 5, 655374, 131073, 5, 720910, 131073, 5, 786446, 131073, 5, 851982, 131073, 5, 917518, 131073, 5, 983054, 131073, 5, 1048590, 131073, 5, 1114126, 131073, 5, 1179662, 131073, 5, 1245198, 131073, 5, 15, 131073, 5, 65551, 131073, 5, 131087, 131073, 5, 196623, 131073, 5, 262159, 131073, 5, 327695, 131073, 5, 393231, 131073, 5, 458767, 131073, 5, 524303, 131073, 5, 589839, 131073, 5, 655375, 131073, 5, 720911, 131073, 5, 786447, 131073, 5, 851983, 131073, 5, 917519, 131073, 5, 983055, 131073, 5, 1048591, 131073, 5, 1114127, 131073, 5, 1179663, 131073, 5, 1245199, 131073, 5, 16, 131073, 5, 65552, 131073, 5, 131088, 131073, 5, 196624, 131073, 5, 262160, 131073, 5, 327696, 131073, 5, 393232, 131073, 5, 458768, 131073, 5, 524304, 131073, 5, 589840, 131073, 5, 655376, 131073, 5, 720912, 131073, 5, 786448, 131073, 5, 851984, 131073, 5, 917520, 131073, 5, 983056, 131073, 5, 1048592, 131073, 5, 1114128, 131073, 5, 1179664, 131073, 5, 1245200, 131073, 5, 17, 131073, 5, 65553, 131073, 5, 131089, 131073, 5, 196625, 131073, 5, 262161, 131073, 5, 327697, 131073, 5, 393233, 131073, 5, 458769, 131073, 5, 524305, 131073, 5, 589841, 131073, 5, 655377, 131073, 5, 720913, 131073, 5, 786449, 131073, 5, 851985, 131073, 5, 917521, 131073, 5, 983057, 131073, 5, 1048593, 131073, 5, 1114129, 131073, 5, 1179665, 131073, 5, 1245201, 131073, 5, 18, 131073, 5, 65554, 131073, 5, 131090, 131073, 5, 196626, 131073, 5, 262162, 131073, 5, 327698, 131073, 5, 393234, 131073, 5, 458770, 131073, 5, 524306, 131073, 5, 589842, 131073, 5, 655378, 131073, 5, 720914, 131073, 5, 786450, 131073, 5, 851986, 131073, 5, 917522, 131073, 5, 983058, 131073, 5, 1048594, 131073, 5, 1114130, 131073, 5, 1179666, 131073, 5, 1245202, 131073, 5, 19, 131073, 5, 65555, 131073, 5, 131091, 131073, 5, 196627, 131073, 5, 262163, 131073, 5, 327699, 131073, 5, 393235, 131073, 5, 458771, 131073, 5, 524307, 131073, 5, 589843, 131073, 5, 655379, 131073, 5, 720915, 131073, 5, 786451, 131073, 5, 851987, 131073, 5, 917523, 131073, 5, 983059, 131073, 5, 1048595, 131073, 5, 1114131, 131073, 5, 1179667, 131073, 5, 1245203, 131073, 5, 20, 131073, 5, 65556, 131073, 5, 131092, 131073, 5, 196628, 131073, 5, 262164, 131073, 5, 327700, 131073, 5, 393236, 131073, 5, 458772, 131073, 5, 524308, 131073, 5, 589844, 131073, 5, 655380, 131073, 5, 720916, 131073, 5, 786452, 131073, 5, 851988, 131073, 5, 917524, 131073, 5, 983060, 131073, 5, 1048596, 131073, 5, 1114132, 131073, 5, 1179668, 131073, 5, 1245204, 131073, 5, 21, 131073, 5, 65557, 131073, 5, 131093, 131073, 5, 196629, 131073, 5, 262165, 131073, 5, 327701, 131073, 5, 393237, 131073, 5, 458773, 131073, 5, 524309, 131073, 5, 589845, 131073, 5, 655381, 131073, 5, 720917, 131073, 5, 786453, 131073, 5, 851989, 131073, 5, 917525, 131073, 5, 983061, 131073, 5, 1048597, 131073, 5, 1114133, 131073, 5, 1179669, 131073, 5, 1245205, 131073, 5, 22, 131073, 5, 65558, 131073, 5, 131094, 131073, 5, 196630, 131073, 5, 262166, 131073, 5, 327702, 131073, 5, 393238, 131073, 5, 458774, 131073, 5, 524310, 131073, 5, 589846, 131073, 5, 655382, 131073, 5, 720918, 131073, 5, 786454, 131073, 5, 851990, 131073, 5, 917526, 131073, 5, 983062, 131073, 5, 1048598, 131073, 5, 1114134, 131073, 5, 1179670, 131073, 5, 1245206, 131073, 5, 23, 131073, 5, 65559, 131073, 5, 131095, 131073, 5, 196631, 131073, 5, 262167, 131073, 5, 327703, 131073, 5, 393239, 131073, 5, 458775, 131073, 5, 524311, 131073, 5, 589847, 131073, 5, 655383, 131073, 5, 720919, 131073, 5, 786455, 131073, 5, 851991, 131073, 5, 917527, 131073, 5, 983063, 131073, 5, 1048599, 131073, 5, 1114135, 131073, 5, 1179671, 131073, 5, 1245207, 131073, 5, 24, 131073, 5, 65560, 131073, 5, 131096, 131073, 5, 196632, 131073, 5, 262168, 131073, 5, 327704, 131073, 5, 393240, 131073, 5, 458776, 131073, 5, 524312, 131073, 5, 589848, 131073, 5, 655384, 131073, 5, 720920, 131073, 5, 786456, 131073, 5, 851992, 131073, 5, 917528, 131073, 5, 983064, 131073, 5, 1048600, 131073, 5, 1114136, 131073, 5, 1179672, 131073, 5, 1245208, 131073, 5, 25, 131073, 5, 65561, 131073, 5, 131097, 131073, 5, 196633, 131073, 5, 262169, 131073, 5, 327705, 131073, 5, 393241, 131073, 5, 458777, 131073, 5, 524313, 131073, 5, 589849, 131073, 5, 655385, 131073, 5, 720921, 131073, 5, 786457, 131073, 5, 851993, 131073, 5, 917529, 131073, 5, 983065, 131073, 5, 1048601, 131073, 5, 1114137, 131073, 5, 1179673, 131073, 5, 1245209, 131073, 5, 26, 131073, 5, 65562, 131073, 5, 131098, 131073, 5, 196634, 131073, 5, 262170, 131073, 5, 327706, 131073, 5, 393242, 131073, 5, 458778, 131073, 5, 524314, 131073, 5, 589850, 131073, 5, 655386, 131073, 5, 720922, 131073, 5, 786458, 131073, 5, 851994, 131073, 5, 917530, 131073, 5, 983066, 131073, 5, 1048602, 131073, 5, 1114138, 131073, 5, 1179674, 131073, 5, 1245210, 131073, 5, 27, 131073, 5, 65563, 131073, 5, 131099, 131073, 5, 196635, 131073, 5, 262171, 131073, 5, 327707, 131073, 5, 393243, 131073, 5, 458779, 131073, 5, 524315, 131073, 5, 589851, 131073, 5, 655387, 131073, 5, 720923, 131073, 5, 786459, 131073, 5, 851995, 131073, 5, 917531, 131073, 5, 983067, 131073, 5, 1048603, 131073, 5, 1114139, 131073, 5, 1179675, 131073, 5, 1245211, 131073, 5, 28, 131073, 5, 65564, 131073, 5, 131100, 131073, 5, 196636, 131073, 5, 262172, 131073, 5, 327708, 131073, 5, 393244, 131073, 5, 458780, 131073, 5, 524316, 131073, 5, 589852, 131073, 5, 655388, 131073, 5, 720924, 131073, 5, 786460, 131073, 5, 851996, 131073, 5, 917532, 131073, 5, 983068, 131073, 5, 1048604, 131073, 5, 1114140, 131073, 5, 1179676, 131073, 5, 1245212, 131073, 5, 29, 131073, 5, 65565, 131073, 5, 131101, 131073, 5, 196637, 131073, 5, 262173, 131073, 5, 327709, 131073, 5, 393245, 131073, 5, 458781, 131073, 5, 524317, 131073, 5, 589853, 131073, 5, 655389, 131073, 5, 720925, 131073, 5, 786461, 131073, 5, 851997, 131073, 5, 917533, 131073, 5, 983069, 131073, 5, 1048605, 131073, 5, 1114141, 131073, 5, 1179677, 131073, 5, 1245213, 131073, 5, 30, 131073, 5, 65566, 131073, 5, 131102, 131073, 5, 196638, 131073, 5, 262174, 131073, 5, 327710, 131073, 5, 393246, 131073, 5, 458782, 131073, 5, 524318, 131073, 5, 589854, 131073, 5, 655390, 131073, 5, 720926, 131073, 5, 786462, 131073, 5, 851998, 131073, 5, 917534, 131073, 5, 983070, 131073, 5, 1048606, 131073, 5, 1114142, 131073, 5, 1179678, 131073, 5, 1245214, 131073, 5, 31, 131073, 5, 65567, 131073, 5, 131103, 131073, 5, 196639, 131073, 5, 262175, 131073, 5, 327711, 131073, 5, 393247, 131073, 5, 458783, 131073, 5, 524319, 131073, 5, 589855, 131073, 5, 655391, 131073, 5, 720927, 131073, 5, 786463, 131073, 5, 851999, 131073, 5, 917535, 131073, 5, 983071, 131073, 5, 1048607, 131073, 5, 1114143, 131073, 5, 1179679, 131073, 5, 1245215, 131073, 5, 32, 131073, 5, 65568, 131073, 5, 131104, 131073, 5, 196640, 131073, 5, 262176, 131073, 5, 327712, 131073, 5, 393248, 131073, 5, 458784, 131073, 5, 524320, 131073, 5, 589856, 131073, 5, 655392, 131073, 5, 720928, 131073, 5, 786464, 131073, 5, 852000, 131073, 5, 917536, 131073, 5, 983072, 131073, 5, 1048608, 131073, 5, 1114144, 131073, 5, 1179680, 131073, 5, 1245216, 131073, 5, 33, 131073, 5, 65569, 131073, 5, 131105, 131073, 5, 196641, 131073, 5, 262177, 131073, 5, 327713, 131073, 5, 393249, 131073, 5, 458785, 131073, 5, 524321, 131073, 5, 589857, 131073, 5, 655393, 131073, 5, 720929, 131073, 5, 786465, 131073, 5, 852001, 131073, 5, 917537, 131073, 5, 983073, 131073, 5, 1048609, 131073, 5, 1114145, 131073, 5, 1179681, 131073, 5, 1245217, 131073, 5, 34, 131073, 5, 65570, 131073, 5, 131106, 131073, 5, 196642, 131073, 5, 262178, 131073, 5, 327714, 131073, 5, 393250, 131073, 5, 458786, 131073, 5, 524322, 131073, 5, 589858, 131073, 5, 655394, 131073, 5, 720930, 131073, 5, 786466, 131073, 5, 852002, 131073, 5, 917538, 131073, 5, 983074, 131073, 5, 1048610, 131073, 5, 1114146, 131073, 5, 1179682, 131073, 5, 1245218, 131073, 5, 35, 131073, 5, 65571, 131073, 5, 131107, 131073, 5, 196643, 131073, 5, 262179, 131073, 5, 327715, 131073, 5, 393251, 131073, 5, 458787, 131073, 5, 524323, 131073, 5, 589859, 131073, 5, 655395, 131073, 5, 720931, 131073, 5, 786467, 131073, 5, 852003, 131073, 5, 917539, 131073, 5, 983075, 131073, 5, 1048611, 131073, 5, 1114147, 131073, 5, 1179683, 131073, 5, 1245219, 131073, 5)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RetryButton" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -22.0
offset_right = 57.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
text = "Try Again"

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("4_g2ls3")]
position = Vector2(1220, 640)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="EnemySpawnPath" type="Path2D" parent="Player"]
position = Vector2(-576, -323)
curve = SubResource("Curve2D_xjmxl")

[node name="EnemySpawnPoint" type="PathFollow2D" parent="Player/EnemySpawnPath"]
position = Vector2(-64, -65)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(1220, 640)

[connection signal="pressed" from="CanvasLayer/RetryButton" to="." method="start_game"]
[connection signal="timeout" from="SpawnTimer" to="." method="spawn_enemy"]
[connection signal="hp_changed" from="Player" to="." method="_on_player_hp_changed"]
